# coolgame

./: .gitignore  CMakeLists.txt  README.md  coolgame
inc/: assets.hpp  attack.hpp  button.hpp  buttons.hpp  config.hpp  fighter.hpp  game.hpp  gamepad.hpp  level_select_menu.hpp  levelmenu.hpp  luie.hpp  main_menu.hpp  openingmenu.hpp  oscar.hpp  pausemenu.hpp  player.hpp  stage.hpp  tile.hpp  util.hpp
inc/fighters/: gamepad.hpp  luie.hpp  oscar.hpp  slug.hpp  stabby.hpp
inc/tiles/: crush_tile.hpp  falling_tile.hpp
src/: assets.cpp  attack.cpp  buttons.cpp  fighter.cpp  game.cpp  gamepad.cpp  level_select_menu.cpp  levelmenu.cpp  main.cpp  main_menu.cpp  openingmenu.cpp  pausemenu.cpp  player.cpp  stage.cpp  tile.cpp  util.cpp
src/fighters/: luie.cpp  oscar.cpp  slug.cpp  stabby.cpp
src/tiles/: crush_tile.cpp  falling_tile.cpp
